--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Marks Shop</title>
 </head>
 <body>
-    
+    <header>
+        <div class="logo">Marks Shop</div>
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>Produtos</li>
+                <li>Contatos</li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
