--- a/index.html
+++ b/index.html
@@ -16,5 +16,15 @@
             </ul>
         </nav>
     </header>
+
+    <main class="container">
+        <div class="tech-circle">
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+        </div>
+    </main>
+
 </body>
 </html>
