--- a/index.html
+++ b/index.html
@@ -24,6 +24,23 @@
             <div class="circle"></div>
             <div class="circle"></div>
         </div>
+
+        <div class="List">
+            <div class="item active">
+                <div class="product-img">
+                    <img src="">
+                </div>
+            </div>
+
+            <div class="item">
+
+            </div>
+
+            <div class="item">
+
+            </div>
+        </div>
+
     </main>
 
 </body>
