--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marks Shop</title>
 </head>
+
 <body>
     <header>
         <div class="logo">Marks Shop</div>
@@ -27,9 +29,19 @@
 
         <div class="List">
             <div class="item active">
+
                 <div class="product-img">
-                    <img src="">
+                    <img src="./img/apple-watch.png" alt="Apple Watch">
                 </div>
+                <div class="content">
+                    <p class="product-tag">Novo Lançamento</p>
+                    <p class="product-name">Apple Watch Series 10</p>
+                    <p class="deescription">O smartwatch mais avançado do mercado. Monitoramento completo de saúde, GPS
+                        integrado, tela AMOLED de alta resolução e bateria de longa duração. Perfeito para acompanhar
+                        seu estilo de vida ativo</p>
+                    <button class="btn">Saiba Mais</button>
+                </div>
+
             </div>
 
             <div class="item">
@@ -44,4 +56,5 @@
     </main>
 
 </body>
+
 </html>
