add air pods max

--- a/index.html
+++ b/index.html
@@ -46,6 +46,17 @@
 
             <div class="item">
 
+                <div class="product-img">
+                    <img src="./img/air-pods.png" alt="Air Pods Max">
+                </div>
+                <div class="content">
+                    <p class="product-tag">Novo Lançamento</p>
+                    <p class="product-name">Air Pods Max</p>
+                    <p class="deescription">Experimente o som em sua forma mais pura. Cancelamento de ruído adaptativo, qualidade de áudio
+                        excepcional e design ergonômico para o máximo conforto. Sua música nunca soou tão bem.</p>
+                    <button class="btn">Saiba Mais</button>
+                </div>
+
             </div>
 
             <div class="item">
