--- a/index.html
+++ b/index.html
@@ -61,6 +61,16 @@
 
             <div class="item">
 
+                <div class="product-img">
+                    <img src="./img/vision-pro.png" alt="Vision Pro">
+                </div>
+                <div class="content">
+                    <p class="product-tag">Novo Lançamento</p>
+                    <p class="product-name">Vision Pro</p>
+                    <p class="deescription">Realidade aumentada imersiva com o Apple Vision Pro: inovação ao alcance dos olhos.</p>
+                    <button class="btn">Saiba Mais</button>
+                </div>
+
             </div>
         </div>
 
