--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="circle"></div>
         </div>
 
-        <div class="List">
+        <div class="list">
 
             <div class="item active">
 
